# metrics-system

./: Cargo.toml
db-manager/: Cargo.toml
db-manager/src/: lib.rs
db-managers/simple-movie-db-manager/: Cargo.toml
db-managers/simple-movie-db-manager/migrations/2020-05-24-180133_gen_ratings/: up.sql
db_manager/: Cargo.toml
db_manager/src/: lib.rs
db_managers/book_db_manager/: .env  Cargo.toml
db_managers/book_db_manager/migrations/2020-05-25-155415_gen_users/: up.sql
db_managers/book_db_manager/migrations/2020-05-25-155420_gen_books/: up.sql
db_managers/book_db_manager/migrations/2020-05-25-155423_gen_ratings/: up.sql
db_managers/book_db_manager/src/: book_db_manager.rs  book_item.rs  book_rating.rs  book_user.rs  lib.rs  schema.rs
db_managers/simple_movie_db_manager/: .env  Cargo.toml
db_managers/simple_movie_db_manager/migrations/2020-05-24-191223_gen_movies/: up.sql
db_managers/simple_movie_db_manager/src/: lib.rs  movie_db_manager.rs  movie_item.rs  movie_rating.rs  movie_user.rs  schema.rs
db_managers/small_movielens_db_manager/: .env  Cargo.toml
db_managers/small_movielens_db_manager/migrations/2020-05-26-015828_gen_users/: up.sql
db_managers/small_movielens_db_manager/migrations/2020-05-26-015831_gen_movies/: up.sql
db_managers/small_movielens_db_manager/migrations/2020-05-26-015835_gen_ratings/: up.sql
db_managers/small_movielens_db_manager/src/: lib.rs  movie_item.rs  movie_rating.rs  movie_user.rs  schema.rs  small_movielens_db_manager.rs
src/: main.rs  simple_movie_interface.rs  small_movielens_interface.rs
