[package]
name = "metrics-system"
version = "0.1.0"
authors = ["limonadev <limonadev@whiteleaf.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["db_manager", "db_managers/*"]

[dependencies]
db_manager = {version="*", path="./db_manager"}
simple_movie_db_manager = {version="*", path="./db_managers/simple_movie_db_manager"}
book_db_manager = {version="*", path="./db_managers/book_db_manager"}
small_movielens_db_manager = {version="*", path="./db_managers/small_movielens_db_manager"}